backend-staging.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend-deployment-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-staging
    spec:
      containers:
      - name: backend-container-staging
        image: 145054867171.dkr.ecr.us-east-1.amazonaws.com/wallace-hatch-backend-staging:V_82
        ports:
        - name: backend-port
          containerPort: 8090
        resources:
            requests:
              cpu: 10m
---


apiVersion: v1
kind: Service
metadata:
  name: backend-service-staging
spec:
  selector:
    app: backend-staging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: backend-port
  type: NodePort
