backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template: 
    metadata:
      labels:
        app: backend
    spec: 
      containers:
      - name: backend-container
        image: 145054867171.dkr.ecr.us-east-1.amazonaws.com/wallace-hatch-backend:latest
        ports: 
        - name: backend-port
          containerPort: 8090
        # env: 
        #   - name: MONGODB_URI
        #     valueFrom:
        #       secretKeyRef:
        #         name: secrets
        #         key: MONGODB_URI
---


apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: backend-port
  type: NodePort
