frontend-staging.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend-deployment-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app-staging
    spec:
      containers:
      - name: frontend-container-staging
        image: 145054867171.dkr.ecr.us-east-1.amazonaws.com/wallace-hatch-frontend-staging:V_11
        ports:
        - name: frontend-port
          containerPort: 5000
        resources:
              requests:
                cpu: 10m


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-staging
spec:
  selector:
    app: frontend-app-staging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: frontend-port
  type: NodePort
