frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-container
        image: 145054867171.dkr.ecr.us-east-1.amazonaws.com/wallace-hatch-frontend:V_19
        ports:
        - name: frontend-port
          containerPort: 3000
        resources:
              requests:
                cpu: 10m


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: frontend-port
  type: NodePort
