traefik.yaml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-lb
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: traefik-ui
          containerPort: 8080
        args:
        - --kubernetes
        - --web
        - --configFile=/etc/traefik/traefik.toml
        volumeMounts:
        - name: config-volume
          mountPath: /etc/traefik
      volumes:
      - name: config-volume
        configMap:
          name: traefik
          items:
          - key: traefik-config
            path: traefik.toml



---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    name: traefik
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:145054867171:certificate/e84c3c05-f0b4-43d5-b0d8-bb00ad67d488"
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: secure
    port: 443
    targetPort: https
  - protocol: TCP
    name: insecure
    port: 80
    targetPort: http
  selector:
    name: traefik-ingress-lb


---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
spec:
  selector:
    name: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
